Archivo David.html creado

--- a/David.html
+++ b/David.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Proyecto-Colaborativo</title>
 </head>
 <body>
     <h1>DAVID SIMON MAMANI GUTIERREZ</h1>
-    <h2>simon.mamani@uab.edu.bo</h2>
-    <h3>72571169</h3>
+    <h2>Ingenieria de Sistems</h2>
+    <h3>simon.mamani@uab.edu.bo</h3>
+   
 </body>
 </html>
